[project]
name = "apis-oeai"
version = "0.1.0"
description = "APIS OEAI"
authors = [{ name = "Matthias Schlögl" }]
requires-python = "~=3.13.0"
license = "MIT"
dependencies = [
    "apis-core-rdf==0.65.1",
    "apis-acdhch-default-settings==2.20.0",
    "django-interval>=0.5.4,<0.6",
    "django-json-editor-field>=0.4.2,<0.5",
    "psycopg[binary]~=3.3",
]

[dependency-groups]
dev = ["ruff>=0.11.8,<0.12"]

[tool.hatch.build.targets.sdist]
include = ["apis_ontology"]

[tool.hatch.build.targets.wheel]
include = ["apis_ontology"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
